codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__patch_rendering__inline_diffs_with_command_and_failure.snap
---
source: tui/src/chatwidget/tests/patch_rendering.rs
expression: "cells.iter().map(|cell|\nlines_to_single_string(&cell.display_lines(100))).collect::<Vec<_>>().join(\"\\n\")"
---
• Edited src/example.rs (+1 -1)
    1 -old
    1 +new

• Ran 1 command
  └ printf checkpoint

• Edited src/example.rs (+1 -1)
    1 -old
    1 +new

✗ Failed to apply patch

• Edited src/example.rs (+1 -1)
    1 -old
    1 +new
